Changelog
=========

14.8-dev0 - (unreleased)
---------------------------

14.7 - (2019-11-07)
---------------------------
* Bug fix: the field 'Last upload' is now hidden on EEAFigure view
  [alecghica refs #102731]

14.6 - (2019-11-06)
---------------------------
* Bug fix: Fix imgview adapter for EEAFigure when first FigureFile doesn't have Image children
  [avoinea refs #109515]

14.5 - (2019-10-30)
---------------------------
* Feature: the field 'Last upload' is now hidden
  [alecghica refs #102731]

14.4 - (2019-10-10)
---------------------------
* Bug fix: Optimize imgview adapters by moving code from __init__
  [avoinea refs #109515]

14.3 - (2019-10-03)
--------------------------
* Change: Modified the @@datasets_overview page to use effective/creation date
  instead of lastUpload
  [iulianpetchesi refs #102731]

14.2 - (2019-02-21)
--------------------------
* Feature: enhancements to the @@datasets_overview page
  [alecghica refs #102273]

14.1 - (2019-01-28)
--------------------------
* Jenkins: Add sonarqube step
  [avoinea refs #101552]

14.0 - (2019-01-11)
------------------------
* Bug fix: Fix Figure convert for files with space in name
  [avoinea refs #101483]
* Feature: added @@datasets_overview browserView which displays datasets listed
  by legislation
  [ichim-david refs #100700]

13.9 - (2018-12-11)
--------------------------
* Change: organisation vocabulary is now reversed sorted in order to have newest
  organisations first
  [ichim-david refs #100699]

13.8 - (2018-12-11)
------------------------
* Change: reportingObligations is now required and introduced a "Not applicable"
  option in case there isn't a ROD to choose
  [ichim-david refs #100699]
* Change: reportingObligations field is now using the OrganisationsWidget
  [ichim-david refs #100699]

13.7 - (2018-12-03)
--------------------------
* Bug fix: Fixed reporting obligation field in Data is not showing records
  [avoinea refs #100588]

13.6 - (2018-10-03)